--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,95 @@
 <ion-app>
-  <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
-      <ion-content>
-        <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+    <ion-menu menuId="main-menu" content-id="main">
+      <ion-header>
+        <iocn-toolbar>
+          <ion-list id="inbox-list">
+            <ion-list-header>Appointment System</ion-list-header>
+          </ion-list>
+        </iocn-toolbar>
+      </ion-header>
 
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-              <ion-label>{{ p.title }}</ion-label>
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle>
+            <ion-item routerLink="home">
+              <ion-icon name="home-outline" slot="start"></ion-icon>
+              <ion-label>Home</ion-label>
+          </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle>
+            <ion-item routerLink="about">
+              <ion-icon name="man-outline" slot="start"></ion-icon>
+              <ion-label>About us</ion-label>
             </ion-item>
           </ion-menu-toggle>
-        </ion-list>
+          
+          <ion-menu-toggle>
+            <ion-item routerLink="contact">
+              <ion-icon name="phone-portrait-outline" slot="start"></ion-icon>
+              <ion-label>Contact US</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
 
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
+          <ion-menu-toggle>
+            <ion-item routerLink="login">
+              <ion-icon name="log-in-outline" slot="start"></ion-icon>
+              <ion-label>Login</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
 
-          <ion-item *ngFor="let label of labels" lines="none">
-            <ion-icon slot="start" ios="bookmark-outline" md="bookmark-sharp"></ion-icon>
-            <ion-label>{{ label }}</ion-label>
-          </ion-item>
+          <ion-menu-toggle>
+            <ion-item routerLink="register">
+              <ion-icon name="person-outline" slot="start"></ion-icon>
+              <ion-label>Register</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle>
+            <ion-item routerLink="create-appointment">
+              <ion-icon name="create-outline" slot="start"></ion-icon>
+              <ion-label>Create Appointment</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle>
+            <ion-item routerLink="view-appointments">
+              <ion-icon name="list-outline" slot="start"></ion-icon>
+              <ion-label>View Appointment</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle>
+            <ion-item routerLink="create-logs">
+              <ion-icon name="clipboard-outline" slot="start"></ion-icon>
+              <ion-label>Create Appointment Log</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle>
+            <ion-item routerLink="view-logs">
+              <ion-icon name="list-outline" slot="start"></ion-icon>
+              <ion-label>View Logs</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          <ion-menu-toggle>
+            <ion-item routerLink="create-type">
+              <ion-icon name="pencil-outline" slot="start" ></ion-icon>
+              <ion-label>Create Appointment Type</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+          
+          <ion-menu-toggle>
+            <ion-item routerLink="view-types">
+              <ion-icon name="list-outline" slot="start"></ion-icon>
+              <ion-label>View Types</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
+          
         </ion-list>
       </ion-content>
     </ion-menu>
-    <ion-router-outlet id="main-content"></ion-router-outlet>
-  </ion-split-pane>
+    <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
